projects/vb6parse/snapshots/syntax/statements/objects/call/call_statement_no_parentheses.snap
---
source: projects/vb6parse/src/syntax/statements/objects/call.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: MySubroutine
        - kind: Newline
          text: "\n"
