projects/vb6parse/snapshots/syntax/statements/objects/call/multiple_call_statements.snap
---
source: projects/vb6parse/src/syntax/statements/objects/call.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: First
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children: []
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Second
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children: []
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Third
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children: []
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
