projects/vb6parse/snapshots/syntax/statements/objects/call/multiple_procedure_calls_in_sub.snap
---
source: projects/vb6parse/src/syntax/statements/objects/call.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: InitializeRandomDNA
                - kind: Newline
                  text: "\n"
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: GetInitialSize
                - kind: Newline
                  text: "\n"
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: GetInitialSpeed
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
